        which allows to handle efficiently sums, recursions, continued
        fractions, etc.
BA  18- new GP function polteichmuller
BA  19- [libpari] Flx_Teichmuller, F2x_Teichmuller
    20- [libpari] mpsinhcosh
    21- new GP function dirpowers
BA  22- [libpari] F2xqX_resultant, F2xqX_disc, FlxqX_resultant, FlxqX_disc,
        FpXQX_resultant, FpXQX_disc, FFX_resultant, FFX_disc
BA  23- FFX_gcd, FFX_extgcd
    24- optional flag to pollegendre and polhermite
    25- new GP function pollaguerre
BA  26- [libpari] Flxn_red, Flxn_sqr, Flx_integ
BA  27- new GP functions export, unexport, exportall, unexportall
    28- [libpari] Fp_divu
BA  29- [libpari] ZpXQX_liftroots
    30- new GP functions getlocalprec, getlocalbitprec
    31- [libpari] guncloneNULL, gluncloneNULL_deep
    32- allow subst(e, x, vector v) for vector(subst(e, x, v[i]))
    33- [libpari] pollegendre_reduced
AP  34- new GP function mfgaloisprojrep
    35- optional v argument to nfmodprinit
    36- [libpari] rfrac_deflate, rfrac_deflate_order, rfrac_deflate_max
    37- [libpari] identity_zv, identity_ZV
    38- [libpari] polintspec, polint_i
BA  39- [libpari] FF_var, FF_preimagerel
BA  40- new GP function ffmaprel
BA  41- [libpari] closure_derivn
BA  42- [libpari] walltimer_start, walltimer_delay, pari_get_histrtime
BA  43- new GP function strtime
BA  44- [libpari] Flxn_exp, Flx_Newton, Flx_fromNewton, Flx_Laplace,
        Flx_invLaplace
BA  45- Support call by reference in GP function: f(~L,x)=listput(~L,x+1)
BA  46- Generic fast linear algebra using CUP decomposition
    47- [libpari] nfX_to_monic
BA  48- new GP function derivn
BA  49- new GP function arity
    50- new GP functions idealdown, idealismaximal
    51- [libpari] bid_get_fact2
AP  52- new GP function bnrclassfield

  Removed
     1- member functions .futu and .tufu [deprecated since 2.2]
     2- inferior hash function hash_str2: use hash_str
     3- matsnf: remove obsolete binary flag '2' [make it a no no-op] (cf mathnf)